# CV_Chatbot

./: .gitignore  Dockerfile  README.md  nginx.conf  pyproject.toml  start.py  start_services.sh  supervisord.conf
backend/app/: __init__.py  main.py  settings.py
backend/app/internal/: bdd_manager.py  embedder.py  export_report.py  llm_chat.py  parser.py  template_prompt.py
backend/app/resources/cv_intel/: cv_exp.py
backend/app/routers/: chatting.py  embedding.py
backend/test/: test_main.py
frontend/app/: main.py  settings.py
frontend/app/pages/: experiences.py
